net/k8s/gateway/traefik-middleware.yaml
# Strip prefix /foobar and /fiibar
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-stripprefix
spec:
  stripPrefixRegex:
    regex:
      - "/foo(bar)?"
      - "/(foo)?bar"
